# holenews

./: .gitignore  Cargo.toml  README.md  release.sh
.github/workflows/: cd.yml  test.yml
migrations/: 20210822124943_battle.sql  20210822125309_population.sql  20210825103558_war.sql
scripts/: README.md  maphexes.py  pyproject.toml  templatetest.py
src/: battle.rs  error.rs  main.rs  map.rs  population.rs  routes.rs  schemas.rs  war.rs
src/models/: battle.rs  mod.rs  population.rs  war.rs
static/css/: article.css  base.css  battle.css  index.css  war.css
static/html/: base_article.html  battle.html  index.html  war.html
static/html/base/: README.md  base.html  base_article.html
static/js/: base.js
templates/: base.html  base_article.html  battle.html  index.html  war.html
templates/article/: battle.html  war.html
