[package]
name = "holenews"
version = "0.1.0"
edition = "2018"

[dependencies]
log = "0.4"
tera = "1"
chrono = "0.4"
dotenv = "0.15"
actix-web = "4.0.0-beta.8"
simplelog = "^0.10.0"
actix-files = "0.6.0-beta.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "sqlite", "chrono" ] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
