[tool.poetry]
name = "holenews-scripts"
version = "0.1.0"
description = "Python-based scripts used for utility/misc non-runtime functions of HoleNews"
authors = ["Owez <root@ogriffiths.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
